fixed button width on mobile

--- a/src/components/exptwo/exptwo.scss
+++ b/src/components/exptwo/exptwo.scss
@@ -179,13 +179,7 @@
                          
                         }
         
-                        @include iphone8{
-                            width: 90px;  
-                        }
-        
-                        @include tablet{
-                            width: 90px;  
-                        }
+                       
                     }
                     
         
