--- a/src/components/substwo/substwo.scss
+++ b/src/components/substwo/substwo.scss
@@ -174,13 +174,6 @@
                          
                         }
         
-                        @include iphone8{
-                            width: 90px;  
-                        }
-        
-                        @include tablet{
-                            width: 90px;  
-                        }
                     }
                     
         
